--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
               ,
             </span>
             <span class="author-block">
+              Wen Wang<sup style="color:#ed4b82;">3</sup><sup>,</sup><sup style="color:#6fbf73;">1</sup></a>
+              ,
+            </span>
+            <span class="author-block">
+              Minxin Chen<sup style="color:#ed4b82;">3</sup><sup>,</sup><sup style="color:#6fbf73;">1</sup></a>
+              ,
+            </span>
+            <span class="author-block">
+              Junyou Su<sup style="color:#ed4b82;">3</sup><sup>,</sup><sup style="color:#6fbf73;">1</sup></a>
+              ,
+            </span>
+            <span class="author-block">
               Wenjia Zhang<sup>†,</sup><sup style="color:#6fbf73;">1</sup></a>,
             </span>
 <!--             <span class="author-block">Quanfeng Lu<sup style="color:#6fbf73;">1</sup><sup>,</sup><sup style="color:#ffac33;">2</sup>,</span>
@@ -260,16 +272,16 @@
         <h2 class="title is-3">Framework Design</h2>
         <div class="content has-text-justified">
           <p>
-            a) We began by reviewing urban planning curricula from leading institutions in both China and the United States, including Peking University, Tongji University, MIT, and Harvard GSD. This analysis identified core knowledge domains and learning objectives in contemporary planning education.
+            We began by reviewing urban planning curricula from leading institutions in both China and the United States, including Peking University, Tongji University, MIT, and Harvard GSD. This analysis identified core knowledge domains and learning objectives in contemporary planning education.
           </p>
           <p>
-            b) We further examined professional qualification examinations for urban planners across multiple countries, drawing from China’s Registered Urban Planner Exam, the U.S. AICP (American Institute of Certified Planners) certification, the UK’s RTPI (Royal Town Planning Institute) accreditation, Australia’s PIA (Planning Institute of Australia), and Canada’s CIP (Canadian Institute of Planners) to establish a foundational disciplinary framework.
+            1. Syllabus Reference:  We further examined professional qualification examinations for urban planners across multiple countries, drawing from China’s Registered Urban Planner Exam, the U.S. AICP (American Institute of Certified Planners) certification, the UK’s RTPI (Royal Town Planning Institute) accreditation, Australia’s PIA (Planning Institute of Australia), and Canada’s CIP (Canadian Institute of Planners) to establish a foundational disciplinary framework.
           </p>
           <p>
-            c) By integrating disciplinary knowledge systems and exam syllabi, we classified the dataset into 4 major categories, 24 intermediate classes, and 81 subcategories. Using Content Validity Index (CVI) and Scale-Level CVI (S-CVI=1.0), we confirmed strong alignment between our classification system and international planner certification frameworks.
+            2. Knowledge Classification: By integrating disciplinary knowledge systems and exam syllabi, we classified the dataset into 4 major categories, 24 intermediate classes, and 81 subcategories. Using Content Validity Index (CVI) and Scale-Level CVI (S-CVI=1.0), we confirmed strong alignment between our classification system and international planner certification frameworks.
           </p>
           <p>
-            d) Adopting Bloom’s revised taxonomy, we developed a structured assessment matrix covering five cognitive levels of planning competencies. Each knowledge point was mapped to specific cognitive tasks:
+            3. Competency Dimensions: Adopting Bloom’s revised taxonomy, we developed a structured assessment matrix covering five cognitive levels of planning competencies. Each knowledge point was mapped to specific cognitive tasks:
           </p>
           <ul>
             <li><strong>Remember:</strong> Recalling facts, terminology, and fundamental concepts.</li>
@@ -279,10 +291,10 @@
             <li><strong>Evaluate:</strong> Comparing standards, assessing judgments, and critiquing solutions. Higher-order tasks also incorporated preliminary Create-level challenges, such as generating actionable recommendations for urban development issues.</li>
           </ul>
           <p>
-            e) To enhance model performance evaluation, particularly for complex reasoning tasks, we systematically embedded Chain-of-Thought (CoT) principles into question design. Scenarios included contextual preconditions, guided prompts, and deliberate logical fallacies, accompanied by discipline-specific analytical pathways to support CoT-match scoring.
+            4. Reasoning Design: To enhance model performance evaluation, particularly for complex reasoning tasks, we systematically embedded Chain-of-Thought (CoT) principles into question design. Scenarios included contextual preconditions, guided prompts, and deliberate logical fallacies, accompanied by discipline-specific analytical pathways to support CoT-match scoring.
           </p>
           <p>
-            f) For validation, we convened a panel of expert urban planners from academia and practice to workshop core knowledge domains and review assessment items. Each question was paired with detailed scoring rubrics specifying evaluation criteria and acceptable response elements. We employed a dual human-machine scoring system, with algorithmic metrics calibrated against human-annotated benchmarks to ensure reliability.
+            5. Assessment Procedure: For validation, we convened a panel of expert urban planners from academia and practice to workshop core knowledge domains and review assessment items. Each question was paired with detailed scoring rubrics specifying evaluation criteria and acceptable response elements. We employed a dual human-machine scoring system, with algorithmic metrics calibrated against human-annotated benchmarks to ensure reliability.
           </p>
         </div>
         </div>
@@ -302,17 +314,17 @@
               采用布鲁姆修订版分类法，我们开发了一个结构化的评估矩阵，涵盖了五个认知水平的规划能力。每个知识点都映射到特定的认知任务：
             </p>
             <ul>
-              <li><strong>记住：</strong>回忆事实、术语和基本概念。</li>
-              <li><strong>理解：</strong>解释、复述和解释关键信息。</li>
-              <li><strong>应用：</strong>综合和情境化规划场景。</li>
-              <li><strong>分析：</strong>分解文本结构，识别隐含假设和诊断问题。</li>
-              <li><strong>评估：</strong>比较标准、评估判断和批评解决方案。更高阶的任务还包含初步的创建级挑战，例如为城市发展问题生成可操作的建议。</li>
+              <li><strong>记忆：</strong>回忆事实、术语和基本概念。</li>
+              <li><strong>理解：</strong>解释、复述、比较和解释关键信息。</li>
+              <li><strong>应用：</strong>调用文本理解，识别隐含假设和诊断问题。</li>
+              <li><strong>分析：</strong>结合具体业务场景给出解决方案。</li>
+              <li><strong>评估：</strong>比较标准、评估判断，调用综合能力，锁定答案。更高阶的任务还包含初步的创建级挑战，例如为城市发展问题生成可操作的建议。</li>
             </ul>
             <p>
               为了增强模型性能评估，特别是对于复杂推理任务，我们系统地嵌入了Chain-of-Thought（CoT）原则到问题设计中。场景包括情境前提、引导提示和故意的逻辑谬误，伴随有特定学科的分析路径，以支持CoT匹配评分。
             </p>
             <p>
-              为验证，我们召集了来自学术界和实践的专业城市规划师进行核心知识领域的研讨会和评估项目的评审。每个问题都与详细的评分标准配对，指定了评估标准和可接受的响应元素。我们采用了双人类-机器评分系统，算法指标经过人类标注基准的校准，以确保可靠性。
+              为验证，我们召集了来自学术界和实践的专业城市规划师进行核心知识领域的研讨会和评估项目的评审。每个问题都与详细的评分标准配对，指定了评估标准和可接受的响应元素。我们采用了人类-机器双重评分体系，算法指标经过人类标注基准的校准，以确保可靠性。
             </p>
           </div>
         </div>
