--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
               Urban planning, as a highly interdisciplinary and practice-oriented field, requires testing beyond mere factual recall. It involves complex situational judgment, policy interpretation, spatial reasoning, and value assessment. Constructing a dedicated text-based benchmark enables effective evaluation of whether large language models truly understand urban planning in terms of: technical terminology and regulatory systems (e.g., <i>Urban and Rural Planning Law</i>, regulatory indicators), multi-level spatial governance logic (national–urban–community), and context-sensitive policy judgment and solution generation (e.g., site selection, land allocation, industrial recommendations).<br>
               Planning texts are characterized by dense terminology, complex structure, and long reasoning chains. Building a benchmark helps enhance large models’ domain-specific adaptability in the following aspects:<br>
               <ul>
-                <li>Textual deconstruction capability (e.g., regulation parsing, indicator interpretation)</li>
-                <li>Multi-perspective decision balancing capability (e.g., resident, government, and developer perspectives)</li>
-                <li>Long-form text understanding and spatial-logical relationship reconstruction capability</li>
+                <li>Ability in Disciplinary Terminology and Regulatory Systems (e.g., "Urban and Rural Planning Law", "Control Planning Indicators")</li>
+                <li>Ability in Multi-level Spatial Governance Logic (Nation - City - Community) (e.g., resident, government, and developer perspectives)</li>
+                <li>Ability in Contextualized Policy Judgement and Solution Generation (e.g., Site Selection, Land Use Allocation, Industrial Recommendations)</li>
               </ul>
               Text-based benchmarks serve as the linguistic foundation for “multimodal urban intelligence.” In subsequent integration with maps, charts, and spatial models, strong textual understanding is the core enabler of coordinated “text-visual-policy” intelligence.<br>
             </p>
@@ -230,8 +230,8 @@
                 规划类文本具有术语密集、结构复杂、推理链条长等特点。构建benchmark有助于提升大模型在以下方面的规划适配能力：<br>
                 <ul>
                     <li>规划文本解构能力（如条例拆解、指标判读）</li>
-                    <li>多视角决策权衡能力（如居民、政府、开发商多方需求）</li>
-                    <li>长文本结构理解与空间信息逻辑重建能力</li>
+                    <li>多层级空间治理逻辑能力（国家-城市-社区）</li>
+                    <li>情境化政策判断与方案生成能力（如选址、用地配置、产业建议）</li>
                 </ul>
                 文本类benchmark是“多模态城市智能”的语言基础。在后续与地图、图表、空间模型的整合中，文本理解能力是完成“图-文-策”三维联动的基础环节。<br>
             </p>
