--- a/index.html
+++ b/index.html
@@ -302,16 +302,16 @@
           <h2 class="title is-3">框架设计</h2>
           <div class="content has-text-justified">
             <p>
-              我们首先对中国和美国的领先城市规划学校进行了深入的研究，包括北京大学、天津大学、麻省理工学院和哈佛大学。这一分析揭示了当代规划教育中的核心知识领域和学习目标。
+              我们首先对中国和美国的领先城市规划学校进行了深入的研究，包括北京大学、同济大学、麻省理工学院和哈佛大学。这一分析揭示了当代规划教育中的核心知识领域和学习目标。
             </p>
             <p>
-              我们进一步研究了多个国家的城市规划师专业资格考试，借鉴了中国的注册城市规划师考试、美国的AICP（美国注册城市规划师协会）认证、英国的RTPI（皇家城镇规划协会）认证、澳大利亚的PIA（澳大利亚规划协会）和加拿大的CIP（加拿大规划师协会），以建立一个基础学科框架。
+              <strong>1.大纲参考：<strong>我们进一步研究了多个国家的城市规划师专业资格考试，借鉴了中国的注册城市规划师考试、美国的AICP（美国注册城市规划师协会）认证、英国的RTPI（皇家城镇规划协会）认证、澳大利亚的PIA（澳大利亚规划协会）和加拿大的CIP（加拿大规划师协会），以建立一个基础学科框架。
             </p>
             <p>
-              通过整合学科知识体系和考试大纲，我们将数据集划分为4个主要类别、24个中级类和81个子类别。使用内容有效性指数（CVI）和尺度级CVI（S-CVI=1.0），我们确认了我们的分类系统与国际规划师认证框架之间的强一致性。
+              <strong>2.知识分类：<strong>通过整合学科知识体系和考试大纲，我们将数据集划分为4个主要类别、24个中级类和81个子类别。使用内容有效性指数（CVI）和尺度级CVI（S-CVI=1.0），我们确认了我们的分类系统与国际规划师认证框架之间的强一致性。
             </p>
             <p>
-              采用布鲁姆修订版分类法，我们开发了一个结构化的评估矩阵，涵盖了五个认知水平的规划能力。每个知识点都映射到特定的认知任务：
+              <strong>3.能力维度：<strong>采用布鲁姆修订版分类法，我们开发了一个结构化的评估矩阵，涵盖了五个认知水平的规划能力。每个知识点都映射到特定的认知任务：
             </p>
             <ul>
               <li><strong>记忆：</strong>回忆事实、术语和基本概念。</li>
@@ -321,10 +321,10 @@
               <li><strong>评估：</strong>比较标准、评估判断，调用综合能力，锁定答案。更高阶的任务还包含初步的创建级挑战，例如为城市发展问题生成可操作的建议。</li>
             </ul>
             <p>
-              为了增强模型性能评估，特别是对于复杂推理任务，我们系统地嵌入了Chain-of-Thought（CoT）原则到问题设计中。场景包括情境前提、引导提示和故意的逻辑谬误，伴随有特定学科的分析路径，以支持CoT匹配评分。
+              <strong>4.推理设计：<strong>为了增强模型性能评估，特别是对于复杂推理任务，我们系统地嵌入了Chain-of-Thought（CoT）原则到问题设计中。场景包括情境前提、引导提示和故意的逻辑谬误，伴随有特定学科的分析路径，以支持CoT匹配评分。
             </p>
             <p>
-              为验证，我们召集了来自学术界和实践的专业城市规划师进行核心知识领域的研讨会和评估项目的评审。每个问题都与详细的评分标准配对，指定了评估标准和可接受的响应元素。我们采用了人类-机器双重评分体系，算法指标经过人类标注基准的校准，以确保可靠性。
+              <strong>5.评估程序：<strong>为验证，我们召集了来自学术界和实践的专业城市规划师进行核心知识领域的研讨会和评估项目的评审。每个问题都与详细的评分标准配对，指定了评估标准和可接受的响应元素。我们采用了人类-机器双重评分体系，算法指标经过人类标注基准的校准，以确保可靠性。
             </p>
           </div>
         </div>
