--- a/index.html
+++ b/index.html
@@ -275,13 +275,13 @@
             We began by reviewing urban planning curricula from leading institutions in both China and the United States, including Peking University, Tongji University, MIT, and Harvard GSD. This analysis identified core knowledge domains and learning objectives in contemporary planning education.
           </p>
           <p>
-            <strong>1. Syllabus Reference:<strong>  We further examined professional qualification examinations for urban planners across multiple countries, drawing from China’s Registered Urban Planner Exam, the U.S. AICP (American Institute of Certified Planners) certification, the UK’s RTPI (Royal Town Planning Institute) accreditation, Australia’s PIA (Planning Institute of Australia), and Canada’s CIP (Canadian Institute of Planners) to establish a foundational disciplinary framework.
+            <strong>1. Syllabus Reference:</strong>  We further examined professional qualification examinations for urban planners across multiple countries, drawing from China’s Registered Urban Planner Exam, the U.S. AICP (American Institute of Certified Planners) certification, the UK’s RTPI (Royal Town Planning Institute) accreditation, Australia’s PIA (Planning Institute of Australia), and Canada’s CIP (Canadian Institute of Planners) to establish a foundational disciplinary framework.
           </p>
           <p>
-            <strong>2. Knowledge Classification:<strong> By integrating disciplinary knowledge systems and exam syllabi, we classified the dataset into 4 major categories, 24 intermediate classes, and 81 subcategories. Using Content Validity Index (CVI) and Scale-Level CVI (S-CVI=1.0), we confirmed strong alignment between our classification system and international planner certification frameworks.
+            <strong>2. Knowledge Classification:</strong> By integrating disciplinary knowledge systems and exam syllabi, we classified the dataset into 4 major categories, 24 intermediate classes, and 81 subcategories. Using Content Validity Index (CVI) and Scale-Level CVI (S-CVI=1.0), we confirmed strong alignment between our classification system and international planner certification frameworks.
           </p>
           <p>
-            <strong>3. Competency Dimensions:<strong> Adopting Bloom’s revised taxonomy, we developed a structured assessment matrix covering five cognitive levels of planning competencies. Each knowledge point was mapped to specific cognitive tasks:
+            <strong>3. Competency Dimensions:</strong> Adopting Bloom’s revised taxonomy, we developed a structured assessment matrix covering five cognitive levels of planning competencies. Each knowledge point was mapped to specific cognitive tasks:
           </p>
           <ul>
             <li><strong>Remember:</strong> Recalling facts, terminology, and fundamental concepts.</li>
@@ -291,10 +291,10 @@
             <li><strong>Evaluate:</strong> Comparing standards, assessing judgments, and critiquing solutions. Higher-order tasks also incorporated preliminary Create-level challenges, such as generating actionable recommendations for urban development issues.</li>
           </ul>
           <p>
-            <strong>4. Reasoning Design:<strong> To enhance model performance evaluation, particularly for complex reasoning tasks, we systematically embedded Chain-of-Thought (CoT) principles into question design. Scenarios included contextual preconditions, guided prompts, and deliberate logical fallacies, accompanied by discipline-specific analytical pathways to support CoT-match scoring.
+            <strong>4. Reasoning Design:</strong> To enhance model performance evaluation, particularly for complex reasoning tasks, we systematically embedded Chain-of-Thought (CoT) principles into question design. Scenarios included contextual preconditions, guided prompts, and deliberate logical fallacies, accompanied by discipline-specific analytical pathways to support CoT-match scoring.
           </p>
           <p>
-            <strong>5. Assessment Procedure:<strong> For validation, we convened a panel of expert urban planners from academia and practice to workshop core knowledge domains and review assessment items. Each question was paired with detailed scoring rubrics specifying evaluation criteria and acceptable response elements. We employed a dual human-machine scoring system, with algorithmic metrics calibrated against human-annotated benchmarks to ensure reliability.
+            <strong>5. Assessment Procedure:</strong> For validation, we convened a panel of expert urban planners from academia and practice to workshop core knowledge domains and review assessment items. Each question was paired with detailed scoring rubrics specifying evaluation criteria and acceptable response elements. We employed a dual human-machine scoring system, with algorithmic metrics calibrated against human-annotated benchmarks to ensure reliability.
           </p>
         </div>
         </div>
@@ -305,13 +305,13 @@
               我们首先对中国和美国的领先城市规划学校进行了深入的研究，包括北京大学、同济大学、麻省理工学院和哈佛大学。这一分析揭示了当代规划教育中的核心知识领域和学习目标。
             </p>
             <p>
-              <strong>1.大纲参考：<strong>我们进一步研究了多个国家的城市规划师专业资格考试，借鉴了中国的注册城市规划师考试、美国的AICP（美国注册城市规划师协会）认证、英国的RTPI（皇家城镇规划协会）认证、澳大利亚的PIA（澳大利亚规划协会）和加拿大的CIP（加拿大规划师协会），以建立一个基础学科框架。
+              <strong>1.大纲参考：</strong>我们进一步研究了多个国家的城市规划师专业资格考试，借鉴了中国的注册城市规划师考试、美国的AICP（美国注册城市规划师协会）认证、英国的RTPI（皇家城镇规划协会）认证、澳大利亚的PIA（澳大利亚规划协会）和加拿大的CIP（加拿大规划师协会），以建立一个基础学科框架。
             </p>
             <p>
-              <strong>2.知识分类：<strong>通过整合学科知识体系和考试大纲，我们将数据集划分为4个主要类别、24个中级类和81个子类别。使用内容有效性指数（CVI）和尺度级CVI（S-CVI=1.0），我们确认了我们的分类系统与国际规划师认证框架之间的强一致性。
+              <strong>2.知识分类：</strong>通过整合学科知识体系和考试大纲，我们将数据集划分为4个主要类别、24个中级类和81个子类别。使用内容有效性指数（CVI）和尺度级CVI（S-CVI=1.0），我们确认了我们的分类系统与国际规划师认证框架之间的强一致性。
             </p>
             <p>
-              <strong>3.能力维度：<strong>采用布鲁姆修订版分类法，我们开发了一个结构化的评估矩阵，涵盖了五个认知水平的规划能力。每个知识点都映射到特定的认知任务：
+              <strong>3.能力维度：</strong>采用布鲁姆修订版分类法，我们开发了一个结构化的评估矩阵，涵盖了五个认知水平的规划能力。每个知识点都映射到特定的认知任务：
             </p>
             <ul>
               <li><strong>记忆：</strong>回忆事实、术语和基本概念。</li>
@@ -321,10 +321,10 @@
               <li><strong>评估：</strong>比较标准、评估判断，调用综合能力，锁定答案。更高阶的任务还包含初步的创建级挑战，例如为城市发展问题生成可操作的建议。</li>
             </ul>
             <p>
-              <strong>4.推理设计：<strong>为了增强模型性能评估，特别是对于复杂推理任务，我们系统地嵌入了Chain-of-Thought（CoT）原则到问题设计中。场景包括情境前提、引导提示和故意的逻辑谬误，伴随有特定学科的分析路径，以支持CoT匹配评分。
+              <strong>4.推理设计：</strong>为了增强模型性能评估，特别是对于复杂推理任务，我们系统地嵌入了Chain-of-Thought（CoT）原则到问题设计中。场景包括情境前提、引导提示和故意的逻辑谬误，伴随有特定学科的分析路径，以支持CoT匹配评分。
             </p>
             <p>
-              <strong>5.评估程序：<strong>为验证，我们召集了来自学术界和实践的专业城市规划师进行核心知识领域的研讨会和评估项目的评审。每个问题都与详细的评分标准配对，指定了评估标准和可接受的响应元素。我们采用了人类-机器双重评分体系，算法指标经过人类标注基准的校准，以确保可靠性。
+              <strong>5.评估程序：</strong>为验证，我们召集了来自学术界和实践的专业城市规划师进行核心知识领域的研讨会和评估项目的评审。每个问题都与详细的评分标准配对，指定了评估标准和可接受的响应元素。我们采用了人类-机器双重评分体系，算法指标经过人类标注基准的校准，以确保可靠性。
             </p>
           </div>
         </div>
