--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
             <h2 class="title is-3">Introduction</h2>
             <div class="content has-text-justified">
             <p>
-              Urban planning, as a highly interdisciplinary and practice-oriented field, requires testing beyond mere factual recall. It involves complex situational judgment, policy interpretation, spatial reasoning, and value assessment. Constructing a dedicated text-based benchmark enables effective evaluation of whether large language models truly understand urban planning in terms of: technical terminology and regulatory systems (e.g., <i>Urban and Rural Planning Law</i>, regulatory indicators), multi-level spatial governance logic (national–urban–community), and context-sensitive policy judgment and solution generation (e.g., site selection, land allocation, industrial recommendations).<br>
-              Planning texts are characterized by dense terminology, complex structure, and long reasoning chains. Building a benchmark helps enhance large models’ domain-specific adaptability in the following aspects:<br>
+              Urban planning, as a highly interdisciplinary and practice-oriented field, requires testing beyond mere factual recall. It involves complex situational judgment, policy interpretation, spatial reasoning, and value assessment. Planning texts are characterized by dense terminology, complex structure, and long reasoning chains. Building a benchmark helps enhance large models’ domain-specific adaptability in the following aspects:<br>
               <ul>
                 <li>Ability in Disciplinary Terminology and Regulatory Systems (e.g., "Urban and Rural Planning Law", "Control Planning Indicators")</li>
                 <li>Ability in Multi-level Spatial Governance Logic (Nation - City - Community) (e.g., resident, government, and developer perspectives)</li>
@@ -226,8 +225,7 @@
             <h2 class="title is-3">概述</h2>
             <div class="content has-text-justified">
             <p>
-                城市规划作为高度跨学科、实践导向强的领域，其测试不仅仅是对知识的简单回忆，更涉及复杂情境判断、政策理解、空间逻辑推理与价值评估。构建专门的文本类benchmark，可以有效检验大模型是否真正理解了城市规划的：学科术语与规范体系（如《城乡规划法》《控规指标》）；多层级空间治理逻辑（国家-城市-社区）；情境化政策判断与方案生成能力（如选址、用地配置、产业建议）。<br>
-                规划类文本具有术语密集、结构复杂、推理链条长等特点。构建benchmark有助于提升大模型在以下方面的规划适配能力：<br>
+                城市规划作为高度跨学科、实践导向强的领域，其测试不仅仅是对知识的简单回忆，更涉及复杂情境判断、政策理解、空间逻辑推理与价值评估。规划类文本具有术语密集、结构复杂、推理链条长等特点。构建benchmark有助于提升大模型在以下方面的规划适配能力：<br>
                 <ul>
                     <li>规划文本解构能力（如条例拆解、指标判读）</li>
                     <li>多层级空间治理逻辑能力（国家-城市-社区）</li>
