--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               Urban planning, as a highly interdisciplinary and practice-oriented field, requires testing beyond mere factual recall. It involves complex situational judgment, policy interpretation, spatial reasoning, and value assessment. Planning texts are characterized by dense terminology, complex structure, and long reasoning chains. Building a benchmark helps enhance large models’ domain-specific adaptability in the following aspects:<br>
               <ul>
                 <li>Ability in Disciplinary Terminology and Regulatory Systems (e.g., "Urban and Rural Planning Law", "Control Planning Indicators")</li>
-                <li>Ability in Multi-level Spatial Governance Logic (Nation - City - Community) (e.g., resident, government, and developer perspectives)</li>
+                <li>Ability in Multi-level Spatial Governance Logic (Nation - City - Community) </li>
                 <li>Ability in Contextualized Policy Judgement and Solution Generation (e.g., Site Selection, Land Use Allocation, Industrial Recommendations)</li>
               </ul>
               Text-based benchmarks serve as the linguistic foundation for “multimodal urban intelligence.” In subsequent integration with maps, charts, and spatial models, strong textual understanding is the core enabler of coordinated “text-visual-policy” intelligence.<br>
