--- a/index.html
+++ b/index.html
@@ -348,40 +348,41 @@
         <div class="content">
           <div class="content has-text-justified">
             <p> 
-              The benchmark items span key categories of urban planning knowledge, including land use planning, transportation planning, urban design, housing and community development, environmental planning, and infrastructure planning. Each TextBench item consists of a query, context information (when applicable), and evaluation criteria. The queries assess different cognitive levels based on Bloom’s revised taxonomy, with balanced distribution across Remembering, Understanding,Applying, Analyzing, Evaluating, and Creating levels.<br>
+              The benchmark items span key categories of urban planning knowledge, including land use planning, transportation planning, urban design, housing and community development, environmental planning, and infrastructure planning. Each TextBench item consists of a query, context information (when applicable), and evaluation criteria. The queries assess different cognitive levels based on Bloom’s revised taxonomy, with balanced distribution across Remembering, Understanding, Applying, Analyzing, Evaluating, and Creating levels.<br>
             </p>
-          <!-- <div class="columns has-text-justified">
-              <img src="./pictures/example.png" alt="framework" class="center">
+          <figure class="image has-text-centered">
+              <img src="./pictures/example.png" alt="framework" class="center" style="width: 90%;">
                   <br>
               <figcaption>
-                <p style="text-align: center;">
+                  <p style="text-align: center;">
                   <font color="061E61">
                       <b>Figure 2:</b> Task Flow Diagram.
                   </font>
                 </p>
               </figcaption>
-          </div>
-          <div class="columns has-text-justified">
-              <img src="./pictures/image_short.png" alt="framework" class="center">
+          </figure>
+          <figure class="image has-text-centered">
+              <img src="./pictures/image_short.png" alt="framework" class="center" style="width: 60%;">
                   <br>
               <figcaption>
-                <p style="text-align: center;">
+                  <p style="text-align: center;">
                   <font color="061E61">
                       <b>Figure 3:</b> Subject System Diagram.
                   </font>
                 </p>
               </figcaption>
-            </div>
-            <div class="columns has-text-justified">
+          </figure>
+          <figure class="image has-text-centered">
               <img src="./pictures/world.png" alt="framework" class="center">
+                  <br>
               <figcaption>
-                <p style="text-align: center;">
-                  <font color="061E61">
+                  <p style="text-align: center;">
+                    <font color="061E61">
                       <b>Figure 4:</b> National Distribution Map Based on Subject Syllabi.
                   </font>
                 </p>
               </figcaption>
-            </div> -->
+          </figure>
           </div>
         </div>
         </div>
@@ -688,6 +689,26 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered has-text-centered">
+      <!-- <div class="column is-full-width has-text-centered"> -->
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Performance</h2>
+        <figure class="image has-text-centered">
+          <img src="./pictures/radar_chart.png" alt="framework" class="center" style="width: 80%;">
+          <figcaption>
+            <p style="text-align: center;font-style: italic;">
+              <font color="061E61">
+                <b>Figure 5</b> Radar Chart of Model Error Type Distribution.
+              </font>
+            </p>
+          </figcaption>
+        </figure>
+      </div>
+    </div>
+  </div>
+</section>
 
 <style>
   .image-row {
