--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           </p>
           <img src="./pictures/planbench_text_show.png" alt="framework" class="center">
           <figcaption>
-            <p style="text-align: center;">
+            <p style="text-align: center;font-style: italic;">
               <font color="061E61">
                   <b>Figure 1:</b> PlanBench-Text Architecture.
               </font>
@@ -332,6 +332,14 @@
             <p>
               <strong>5.评估程序：</strong>为验证，我们召集了来自学术界和实践的专业城市规划师进行核心知识领域的研讨会和评估项目的评审。每个问题都与详细的评分标准配对，指定了评估标准和可接受的响应元素。我们采用了人类-机器双重评分体系，算法指标经过人类标注基准的校准，以确保可靠性。
             </p>
+            <img src="./pictures/planbench_text_show.png" alt="framework" class="center">
+            <figcaption>
+              <p style="text-align: center;font-style: italic;">
+                <font color="061E61">
+                    <b>Figure 1:</b> PlanBench-Text Architecture.
+                </font>
+              </p>
+            </figcaption>
           </div>
         </div>
       </div>
@@ -392,41 +400,39 @@
               <p>
                 benchmark题目覆盖了城市规划知识的关键类别，包括土地利用规划、交通规划、城市设计、住房和社区发展、环境规划和基础设施规划。每个TextBench项目由一个查询、上下文信息（如适用）和评估标准组成。查询根据布鲁姆修订版分类法评估不同的认知水平，涵盖了记忆、理解、应用、分析、评估和创造等多个层次。
               </p>
-            <!-- <div class="columns has-text-justified">
-              <img class="columns is-centered has-text-centered" src="./pictures/example.png" alt="Teaser" width="95%"
-                  style="margin:0 auto">
+          <figure class="image has-text-centered">
+              <img src="./pictures/example.png" alt="framework" class="center" style="width: 90%;">
                   <br>
               <figcaption>
-                <p style="text-align: center;">
+                  <p style="text-align: center;">
                   <font color="061E61">
                       <b>Figure 2:</b> Task Flow Diagram.
                   </font>
                 </p>
               </figcaption>
-            </div>
-            <div class="columns has-text-justified">
-              <img class="columns is-centered has-text-centered" src="./pictures/image_short.png" alt="knowledge classification" width="95%"
-                  style="margin:0 auto">
+          </figure>
+          <figure class="image has-text-centered">
+              <img src="./pictures/image_short.png" alt="framework" class="center" style="width: 60%;">
                   <br>
               <figcaption>
-                <p style="text-align: center;">
+                  <p style="text-align: center;">
                   <font color="061E61">
                       <b>Figure 3:</b> Subject System Diagram.
                   </font>
                 </p>
               </figcaption>
-            </div>
-            <div class="columns has-text-justified">
-              <img class="columns is-centered has-text-centered" src="./pictures/world.png" alt="knowledge classification" width="95%"
-                  style="margin:0 auto">
+          </figure>
+          <figure class="image has-text-centered">
+              <img src="./pictures/world.png" alt="framework" class="center">
+                  <br>
               <figcaption>
-                <p style="text-align: center;">
-                  <font color="061E61">
+                  <p style="text-align: center;">
+                    <font color="061E61">
                       <b>Figure 4:</b> National Distribution Map Based on Subject Syllabi.
                   </font>
                 </p>
               </figcaption>
-            </div> -->
+          </figure>
           </div>
         </div>
       </div>
