--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Urban Planning Bench</title>
+  <title>PlanGPT-Bench</title>
   <meta charset="utf-8">
   <meta name="description"
         content="Multimodal Multi-image Understanding for Evaluating Multimodal Large Language Models">
   <meta name="keywords" content="PlanVLM-bench, LVLM, LVLM Evaluation, multiple images, Vision Language Model, Large Language Model, Large Multimodal Model, artificial intelligence, AI, AGI, artificial general intelligence">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Urban Planning Bench: A Comprehensive Benchmark for Evaluating Urban Planning Capabilities in Large Language Models</title>
+  <title>PlanGPT-Bench: A Comprehensive Benchmark for Evaluating Urban Planning Capabilities in Large Language Models</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
@@ -74,7 +74,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title is-bold">
-            <span class="MMIU" style="vertical-align: middle">Urban Planning Bench</span>
+            <span class="MMIU" style="vertical-align: middle">PlanGPT-Bench</span>
             </h1>
           <h2 class="subtitle is-3 publication-subtitle">
             A Comprehensive Benchmark for Evaluating Urban Planning Capabilities in Large Language Models
