--- a/index.html
+++ b/index.html
@@ -141,11 +141,9 @@
           </div>
           
 
-          <div class="column has-text-centered">
+          <!-- <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link. -->
               <span class="link-block">
-                <!-- @PAN TODO: change links -->
                 <a href="https://arxiv.org"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -158,9 +156,7 @@
                 <a href="https://huggingface.co"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <!-- <i class="far fa-images"></i> -->
                       <p style="font-size:18px">🤗</p>
-                      <!-- 🔗 -->
                   </span>
                   <span>Dataset</span>
                 </a>
@@ -175,19 +171,9 @@
                   </a>
               </span>
               
-              <!-- Leaderboard Link. -->
-              <!-- <span class="link-block">
-                <a href="#leaderboard"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon has-text-white">
-                    <i class="fa-solid fa-trophy"></i>
-                  </span>
-                  <span>Leaderboard</span>
-                </a>
-              </span> -->
             </div>
 
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
